# chatapp

./: .env  Cargo.toml  diesel.toml
.proto/: chats.proto
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: actor_test.rs  db.rs  main.rs  modle.rs  route.rs  schema.rs
