[package]
name = "chatapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["serde_json", "chrono","r2d2","postgres"] }
prost = "0.13.3"
prost-build = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
